* flymake.el 0.4.6 (candidate)
  * Add support for csslint.
  * Update DOCSTRING for the various temp filename functions.
  * Attempt to find Perl project include dir if it's in a standard place.

* flymake.el 0.4.5 (2011-11-26-19:28)
  * Use butlast for error truncation rather than messing with car/cdr directly.
  * Clarify use of $PERLBREW_ROOT to detect if perlbrew sync is required.
  * Add support for info class error messages.
    (Inspired by https://github.com/gabrielelanaro/emacs-for-python/)
  * Customizable error-message classification regexps.
  * Add support for Javascript errors with jshint.

* flymake.el 0.4.4 (2011-11-01-21:37)
  * No longer prompt about running flymake processes when killing buffers.
    (Karl Chen via http://lists.gnu.org/archive/html/emacs-devel/2010-03/msg01217.html)
  * Attempt to prevent MOTD/login message from remote Tramp syntax checks
    appearing at the end of the buffer being syntax-checked.
  * Suppress Tramp message-area spam during remote syntax checks.
  * Enable flymake logging to message area again.

* flymake.el 0.4.3 (2011-10-19-20:49)
  * Fix interaction of tramp with flymake-run-in-place set to nil.
    (Thanks to nullie and dncohen for analysis of the problem and debugging.)

* flymake.el 0.4.2 (2011-10-16-07:02)
  * Add support for multiple errors in error tooltip. (Contributed by nullie.)
  * Control number of errors in tooltip with flymake-number-of-errors-to-display.